Update parser. Add getters to battery.

--- a/aiccore/aiclibs/build.gradle
+++ b/aiccore/aiclibs/build.gradle
@@ -12,6 +12,10 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    packagingOptions {
+        exclude 'NOTICE'
+        exclude 'LICENSE.txt'
+    }
     buildTypes {
         release {
             minifyEnabled false
