--- a/aicdemos/aicdemosensor/build.gradle
+++ b/aicdemos/aicdemosensor/build.gradle
@@ -26,10 +26,20 @@ android {
     }
 }
 
+afterEvaluate {
+    tasks.findByName("assembleDebug").dependsOn("assembleDebugTest")
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.android.support.test:testing-support-lib:0.1'
-    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.0.0'
+    compile 'com.google.android.gms:play-services:+'
+    compile 'com.androidplot:androidplot-core:0.6.1'
+
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+
     compile project(':aiccore')
 }
