--- a/aicdemos/aicdemosensor/src/main/AndroidManifest.xml
+++ b/aicdemos/aicdemosensor/src/main/AndroidManifest.xml
@@ -1,12 +1,58 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <manifest
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.zenika.aic.demo.sensor">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="aic.zenika.com.sensor" >
 
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="19" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="aic.zenika.fr.sensor.permission.MAPS_RECEIVE"/>
+    <permission android:name="aic.zenika.com.sensor.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCjchVaBOguCO8oh5RQRLkCasPp3Ym1Hvo"/>
+
+        <activity
+            android:name="aic.zenika.com.sensor.controller.activity.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="aic.zenika.com.sensor.controller.activity.BaseActivity"
+            android:label="@string/title_activity_base" >
+        </activity>
     </application>
-
 </manifest>
