--- a/aicdemos/aicdemologin/build.gradle
+++ b/aicdemos/aicdemologin/build.gradle
@@ -29,7 +29,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.android.support.test:testing-support-lib:0.1'
-    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.0.0'
+    compile 'com.android.support.test:runner:0.3'
+    compile 'com.android.support.test:rules:0.3'
+    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+
     compile project(':aiccore')
 }
