--- a/aicdemos/aicdemologin/src/main/AndroidManifest.xml
+++ b/aicdemos/aicdemologin/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="aic.zenika.fr.login" >
+    package="aic.zenika.com.login" >
 
     <application
         android:allowBackup="true"
