--- a/aicdemos/aicdemosensor/src/main/AndroidManifest.xml
+++ b/aicdemos/aicdemosensor/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-permission android:name="aic.zenika.fr.sensor.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="aic.zenika.com.sensor.permission.MAPS_RECEIVE"/>
     <permission android:name="aic.zenika.com.sensor.permission.MAPS_RECEIVE"
         android:protectionLevel="signature"/>
 
