--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
-/build
+.tmp
+.sass-cache
+node_modules
+app/bower_components
+dist
+
+file-uploads/
+build/
+.gradle/
+daemon/
 
 # Compiled source #
 ###################
@@ -10,7 +19,7 @@
 *.so
 *.pyo
 *.pyc
- 
+
 # Packages #
 ############
 *.7z
@@ -21,13 +30,12 @@
 *.rar
 *.tar
 *.zip
- 
+
 # Logs and databases #
 ######################
 *.log
-*.sql
 *.sqlite
- 
+
 # OS generated files #
 ######################
 .DS_Store
@@ -55,8 +63,8 @@ composer.lock
 *#
 **/*~
 
-*.bak 
+*.bak
 *.swp
 *.ai
 *.eps
-*.psd 
+*.psd
