Update sensor demo to work with UiAutomator 2.0.

--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,7 @@ allprojects {
     repositories {
         jcenter()
     }
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:22.1.0'
+    }
 }
