--- a/aiccore/build.gradle
+++ b/aiccore/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    //compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.tools.ddms:ddmlib:22.0'
     compile('org.simpleframework:simple-xml:2.7.1' ){
         exclude module: 'stax'
