--- a/aicdemos/aicdemosensor/build.gradle
+++ b/aicdemos/aicdemosensor/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '22.0.0'
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
 
     lintOptions {
         abortOnError false
@@ -13,7 +13,7 @@ android {
     }
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,14 +27,32 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 dependencies {
+    /*
+        compile fileTree(include: ['*.jar'], dir: 'libs')
+        compile 'com.android.support:appcompat-v7:+'
+        compile 'com.google.android.gms:play-services:+'
+        compile 'com.androidplot:androidplot-core:0.6.1'
+
+        androidTestCompile 'com.android.support.test:runner:0.3'
+        androidTestCompile 'com.android.support.test:rules:0.3'
+        androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+        androidTestCompile project(':aiccore')
+    */
+
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:+'
     compile 'com.androidplot:androidplot-core:0.6.1'
 
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
-    compile project(':aiccore')
+    androidTestCompile project(':aiccore')
 }
