--- a/aiccore/build.gradle
+++ b/aiccore/build.gradle
@@ -25,14 +25,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile 'com.android.support:appcompat-v7:22.0.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.tools.ddms:ddmlib:22.0'
-    compile('org.simpleframework:simple-xml:2.7.1' ){
+    compile('org.simpleframework:simple-xml:2.7.1') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
     compile 'org.apache.httpcomponents:httpclient:4.4'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile files('libs/protobuf-java-2.3.0.jar')
 }
