--- a/aiccore/build.gradle
+++ b/aiccore/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:1.3.+'
         classpath 'org.aspectj:aspectjtools:1.8.1'
     }
 }
@@ -21,6 +21,7 @@ android {
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     packagingOptions {
         exclude 'NOTICE'
@@ -32,20 +33,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    defaultConfig {
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-}
-
-repositories {
-    maven {
-        url 'http://repo.spring.io/milestone'
-    }
-    mavenCentral()
 }
 
 dependencies {
-    //compile 'com.android.support:appcompat-v7:22.0.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'org.aspectj:aspectjrt:1.8.1'
     compile 'com.android.tools.ddms:ddmlib:22.0'
@@ -58,16 +48,11 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile files('libs/protobuf-java-2.3.0.jar')
     androidTestCompile 'com.android.support.test:runner:0.4'
-    // Set this dependency to use JUnit 4 rules
     androidTestCompile 'com.android.support.test:rules:0.4'
-    // Set this dependency to build and run Espresso tests
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
-    // Set this dependency to build and run UI Automator tests
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
     compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     compile 'com.android.support:support-annotations:22.2.0'
-    androidTestCompile 'com.android.support.test:runner:0.4.1'
-    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
-
+    compile 'com.android.support.test:runner:0.4.1'
 }
