--- a/aiccore/build.gradle
+++ b/aiccore/build.gradle
@@ -44,7 +44,7 @@ dependencies {
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
-    compile 'org.apache.httpcomponents:httpclient:4.4'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'com.google.code.gson:gson:2.3.1'
     compile files('libs/protobuf-java-2.3.0.jar')
     androidTestCompile 'com.android.support.test:runner:0.4'
