--- a/aicdemos/aicdemosensor/build.gradle
+++ b/aicdemos/aicdemosensor/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '21.1.2'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
 
     lintOptions {
         abortOnError false
@@ -35,22 +35,20 @@ repositories {
 
 dependencies {
     /*
-        compile fileTree(include: ['*.jar'], dir: 'libs')
-        compile 'com.android.support:appcompat-v7:+'
-        compile 'com.google.android.gms:play-services:+'
-        compile 'com.androidplot:androidplot-core:0.6.1'
+                            compile fileTree(include: ['*.jar'], dir: 'libs')
+                            compile 'com.android.support:appcompat-v7:+'
+                            compile 'com.google.android.gms:play-services:+'
+                            compile 'com.androidplot:androidplot-core:0.6.1'
 
-        androidTestCompile 'com.android.support.test:runner:0.3'
-        androidTestCompile 'com.android.support.test:rules:0.3'
-        androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
-        androidTestCompile project(':aiccore')
-    */
-
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:21.0.3'
+                            androidTestCompile 'com.android.support.test:runner:0.3'
+                            androidTestCompile 'com.android.support.test:rules:0.3'
+                            androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+                            androidTestCompile project(':aiccore')
+                        */
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.google.android.gms:play-services:+'
     compile 'com.androidplot:androidplot-core:0.6.1'
-
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
