--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 05 15:36:44 CET 2015
-sdk.dir=/home/pierre/Java/Android/Sdk
+#Tue Jan 12 09:54:42 CET 2016
+ndk.dir=/home/zenika/Android/Sdk/ndk-bundle
+sdk.dir=/home/zenika/Android/Sdk
