--- a/aiccore/build.gradle
+++ b/aiccore/build.gradle
@@ -5,14 +5,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.+'
+        classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'org.aspectj:aspectjtools:1.8.1'
     }
 }
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    buildToolsVersion "22.0.1"
     lintOptions {
         abortOnError false
     }
@@ -39,20 +39,20 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'org.aspectj:aspectjrt:1.8.1'
     compile 'com.android.tools.ddms:ddmlib:22.0'
+    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile 'com.google.code.gson:gson:2.4'
+    compile files('libs/protobuf-java-2.3.0.jar')
+    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+    compile 'com.android.support:support-annotations:22.2.0'
+    compile 'com.android.support.test:runner:0.4.1'
     compile('org.simpleframework:simple-xml:2.7.1') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile files('libs/protobuf-java-2.3.0.jar')
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.4'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
-    compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
-    compile 'com.android.support:support-annotations:22.2.0'
-    compile 'com.android.support.test:runner:0.4.1'
 }
