--- a/aicdemos/aicdemosensor/build.gradle
+++ b/aicdemos/aicdemosensor/build.gradle
@@ -33,13 +33,15 @@ repositories {
     }
 }
 
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.google.android.gms:play-services:+'
-    compile 'com.androidplot:androidplot-core:0.6.1'
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
     androidTestCompile project(':aiccore')
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.androidplot:androidplot-core:0.6.1'
+    compile 'com.android.support:support-v4:23.1.1'
 }
