--- a/aicnfc/src/main/AndroidManifest.xml
+++ b/aicnfc/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.aicnfc">
 
+
+    <uses-sdk
+        android:minSdkVersion="19"
+        android:targetSdkVersion="19" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +16,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
@@ -36,10 +40,13 @@
 
         <intent-filter>
             <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-
             <category android:name="android.intent.category.DEFAULT" />
-
             <data android:mimeType="text/plain" />
+        </intent-filter>
+        <intent-filter>
+            <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <data android:scheme="http" />
         </intent-filter>
 
         <meta-data
