--- a/aiccore/build.gradle
+++ b/aiccore/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0'
         classpath 'org.aspectj:aspectjtools:1.8.1'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.7.7'
     }
 }
 
@@ -41,7 +42,7 @@ dependencies {
     compile 'com.android.tools.ddms:ddmlib:22.0'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'com.google.code.gson:gson:2.4'
-    compile files('libs/protobuf-java-2.3.0.jar')
+    //compile files('libs/protobuf-java-2.3.0.jar')
     compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
     compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     compile 'com.android.support:support-annotations:22.2.0'
