--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-local.properties
 .tmp
 .sass-cache
 node_modules
@@ -28,6 +27,7 @@ daemon/
 *.gz
 *.iso
 *.jar
+!aiccore/libs/protobuf-java-2.3.0.jar
 *.rar
 *.tar
 *.zip
