--- a/aiccore/build.gradle
+++ b/aiccore/build.gradle
@@ -37,12 +37,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.aspectj:aspectjrt:1.8.1'
     compile 'com.android.tools.ddms:ddmlib:22.0'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
     compile 'com.google.code.gson:gson:2.4'
-    //compile files('libs/protobuf-java-2.3.0.jar')
     compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
     compile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     compile 'com.android.support:support-annotations:22.2.0'
@@ -56,4 +55,5 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.4'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+    compile files('libs/protobuf-java-2.3.0.jar')
 }
