--- a/aicdemos/aicdemosensor/src/main/AndroidManifest.xml
+++ b/aicdemos/aicdemosensor/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
         <tech-list>
