--- a/aicdemos/aicdemosensor/build.gradle
+++ b/aicdemos/aicdemosensor/build.gradle
@@ -13,6 +13,8 @@ android {
     packagingOptions {
         exclude 'NOTICE'
         exclude 'LICENSE.txt'
+        exclude 'META-INF/maven/com.google.guava/guava/pom.properties'
+        exclude 'META-INF/maven/com.google.guava/guava/pom.xml'
     }
     defaultConfig {
         minSdkVersion 19
